# skills

./: CHANGELOG.md  LICENSE.md  README.md
skills/scrape/: SKILL.md  meta.json
skills/scrape-add-page-object/: SKILL.md
skills/scrape-add-page-object/scripts/: add_page_object.py
skills/scrape-analyze-page/: SKILL.md
skills/scrape-analyze-page/scripts/: clean_html.py  extract_metadata.py
skills/scrape-codegen/: SKILL.md
skills/scrape-codegen-analyze/: SKILL.md
skills/scrape-codegen-generate/: SKILL.md
skills/scrape-codegen/scripts/: convert_fixtures.py
skills/scrape-create-spider/: SKILL.md
skills/scrape-create-spider/references/: scrapy-poet-reference.md  scrapy-zyte-api-reference.md
skills/scrape-define/: SKILL.md
skills/scrape-ensure-project/: SKILL.md
skills/scrape-ensure-project/assets/project-template/{{cookiecutter.project_name}}/: pyproject.toml  scrapy.cfg
skills/scrape-ensure-project/assets/project-template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: settings.py
skills/scrape-explore-site/: SKILL.md
skills/scrape-explore-site/scripts/: apply_classification.py  download.py  extract_links.py  extract_nav_values.py  extract_values.py
skills/scrape-review-schema/: SKILL.md
skills/scrape-review-schema/assets/: review.html  review.js  style.css
skills/scrape-review-schema/scripts/: feedback-server.py
skills/scrape-review-schema/tests/: test_feedback_server.py
skills/scrape-scrapy-cloud/: SKILL.md
skills/scrape-spec/: SKILL.md
skills/scrape-zyte-api-stats/: SKILL.md
skills/scrape-zyte-login/: SKILL.md
(+13 files in other folders)
