[project]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "scrapy>=2.10",
    "scrapy-poet>=0.26",
    "scrapy-zyte-api[provider]>=0.17",
    "web-poet>=0.21",
    "itemadapter>=0.13",
    "extruct>=0.18",
    "price-parser>=0.3.4",
    "jmespath>=1",
    "pytest>=7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
